# HCLAS

./: CLAS.cabal  README.md  flake.nix  init_template.sh  justfile
src/: Algorithms.hs  Interpreter.hs  Main.hs  Parser.hs  PrettyPrinter.hs  Test.hs  Types.hs
